objects/ssot__LocationGroupProdInvChg__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AvailableToFulfillQuantity__c</fullName>
        <label>Available To Fulfill Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvailableToOrderQuantity__c</fullName>
        <label>Available To Order Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ChangeDateTime__c</fullName>
        <label>Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalLocationGroupIdentifier__c</fullName>
        <label>External Location Group Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GroupReservedQuantity__c</fullName>
        <label>Group Reserved Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Location Grp Product Inventory Change Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDeleted__c</fullName>
        <label>Is Deleted</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationGroupId__c</fullName>
        <label>Location Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnHandQuantity__c</fullName>
        <label>On Hand Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReservedQuantity__c</fullName>
        <label>Reserved Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SKUNumber__c</fullName>
        <label>Stock Keeping Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SafetyStockQuantity__c</fullName>
        <label>Safety Stock Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SharedGroupReservedQuantity__c</fullName>
        <label>Shared Group Reserved Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941902240_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupProdInvChg_ProductId_ma_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>LocationGroupProdInvChg_ProductId_ma_rel</relationshipLabel>
        <relationshipName>rel_1708941902240_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1708941907758_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LocationGroupProdInvChg_LocationGrou_rel</label>
        <referenceTo>ssot__LocationGroup__dlm</referenceTo>
        <relationshipLabel>LocationGroupProdInvChg_LocationGrou_rel</relationshipLabel>
        <relationshipName>rel_1708941907758_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>